--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cc.dobot.crtcpdemo">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:name=".AppDemo"
         android:allowBackup="true"
@@ -12,17 +14,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- Main launcher activity -->
         <activity
             android:configChanges="orientation|screenSize|locale|layoutDirection"
             android:launchMode="singleTask"
             android:name=".MainActivity"
-            android:screenOrientation="sensorLandscape"
-            >
+            android:screenOrientation="sensorLandscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
+        <!-- Add this activity declaration -->
+        <activity
+            android:name=".MainActivityEpsilon"
+            android:screenOrientation="sensorLandscape"
+            android:configChanges="orientation|screenSize|locale|layoutDirection"
+            android:launchMode="singleTask"
+            android:exported="true" />
+    </application>
 </manifest>
