--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
     implementation project(path: ':socket-core')
     implementation project(path: ':socket-client')
 
